tests/ui/args-flatten-unnamed.stderr
error[E0080]: evaluation panicked: TODO: cannot arg(flatten) positional arguments yet
 --> tests/ui/args-flatten-unnamed.rs:6:12
  |
6 |     inner: Inner,
  |            ^^^^^ evaluation of `_` failed here
